--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -493,3 +493,11 @@ WordPress plugin cm-download-manager:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8877 https://github.com/nmap/nmap/pull/38'
     fingerprint: detect_general
     post_processing: ['php6.fcgi']
+WordPress plugin cool-video-gallery:
+  1:
+    location: ['/wp-content/plugins/cool-video-gallery/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7527'
+    fingerprint: detect_general
+    post_processing: ['php6.fcgi']
