--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -968,3 +968,11 @@ WordPress plugin email-users:
     cve: 'https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_email_users_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin markdown-on-save-improved:
+  1:
+    location: ['/wp-content/plugings/markdown-on-save-improved/readme.txt']
+    secure_version: '2.5.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-4812'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
