--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1787,3 +1787,11 @@ WordPress plugin portfolio-gallery:
     cve: 'OVE-20160724-0009 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_huge_it_portfolio_gallery_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin instagram-feed:
+  1:
+    location: ['/wp-content/plugins/instagram-feed/readme.txt']
+    secure_version: '1.4.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160724-0014 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_instagram_feed_plugin_via_csrf.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
