--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1803,3 +1803,11 @@ WordPress plugin post-indexer:
     cve: 'https://security.dxw.com/advisories/sql-injection-in-post-indexer-allows-super-admins-to-read-the-contents-of-the-database/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin gallery-images:
+  1:
+    location: ['/wp-content/plugins/gallery-images/readme.txt']
+    secure_version: '2.0.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160724-0015 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_in_gallery___image_gallery_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
