--- a/yamls/phpbb3.yml
+++ b/yamls/phpbb3.yml
@@ -18,7 +18,7 @@ phpBB3 3.1:
     location: ['/includes/constants.php']
     secure_version: '3.2.6'
     regexp: ['.*?PHPBB_VERSION.*?(?P<version>3\.1[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9826 https://nvd.nist.gov/vuln/detail/CVE-2019-11767'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9826 https://nvd.nist.gov/vuln/detail/CVE-2019-11767 https://www.phpbb.com/community/viewtopic.php?f=14&t=2509941'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 phpBB3 3.0:
@@ -26,6 +26,6 @@ phpBB3 3.0:
     location: ['/includes/constants.php']
     secure_version: '3.2.6'
     regexp: ['.*?PHPBB_VERSION.*?(?P<version>3\.0[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9826 https://nvd.nist.gov/vuln/detail/CVE-2019-11767'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9826 https://nvd.nist.gov/vuln/detail/CVE-2019-11767 https://www.phpbb.com/community/viewtopic.php?f=14&t=2509941'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
