--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2803,3 +2803,11 @@ WordPress plugin woocommerce-checkout-manager:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-11807 https://www.wordfence.com/blog/2019/05/unauthenticated-media-deletion-vulnerability-patched-in-woocommerce-checkout-manager-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin yuzo-related-post:
+  1:
+    location: ['/wp-content/plugins/yuzo-related-post/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2019/04/yuzo-related-posts-zero-day-vulnerability-exploited-in-the-wild/'  # CVE requested 2019-05-08
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
