--- a/yamls/wordpress-themes.yml
+++ b/yamls/wordpress-themes.yml
@@ -14,3 +14,11 @@ WordPress theme atahualpa:
     cve: 'OVE-20160724-0003 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_atahualpa_wordpress_theme.html OVE-20160724-0004 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_atahualpa_wordpress_theme.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress theme yellow-pencil-visual-theme-customizer:
+  1:
+    location: ['/wp-content/themes/yellow-pencil-visual-theme-customizer/readme.txt']
+    secure_version: '7.2.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2019/04/zero-day-vulnerability-in-yellow-pencil-visual-theme-customizer-exploited-in-the-wild/'  # TODO: CVE requested 2019-05-12
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
