--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -837,6 +837,14 @@ WordPress plugin ninja-forms:
     cve: 'OVE-20160714-0017 https://sumofpwn.nl/advisory/2016/multiple_cross_site_scripting_vulnerabilities_in_ninja_forms_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin ninja-forms-uploads:
+  1:
+    location: ['/wp-content/plugins/ninja-forms-uploads/readme.txt']
+    secure_version: '3.0.23'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-10869 https://www.onvio.nl/nieuws/ninjaforms-vulnerability'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 # TODO https://www.wordfence.com/blog/2016/05/xss-vulnerability-wordfence-6-1-1-6-1-6-severity-6-1medium/
 WordPress plugin wordfence:
   1:
