--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2769,7 +2769,7 @@ WordPress plugin accelerated-mobile-pages:
     location: ['/wp-content/plugins/accelerated-mobile-pages/readme.txt']
     secure_version: '0.9.97.21'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2018/11/xss-injection-campaign-exploits-wordpress-amp-plugin/'
+    cve: 'https://www.wordfence.com/blog/2018/11/xss-injection-campaign-exploits-wordpress-amp-plugin/'  # TODO: CVE requested 2019-05-12
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin social-warfare:
