--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2830,3 +2830,11 @@ WordPress plugin convertplug:
     cve: 'https://www.wordfence.com/blog/2019/05/critical-vulnerability-patched-in-popular-convert-plus-plugin/'  # TODO: CVE request needed
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-database-backup:
+  1:
+    location: ['/wp-content/plugins/wp-database-backup/readme.txt']
+    secure_version: '5.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2019/05/os-command-injection-vulnerability-patched-in-wp-database-backup-plugin/'  # TODO: CVE request needed
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
