--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -125,6 +125,16 @@
 # CVE-2018-0504 1.31.1/1.30.1/1.29.3/1.27.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html
 # CVE-2018-0505 1.31.1/1.30.1/1.29.3/1.27.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html
 # CVE-2018-13258 1.31.1
+# CVE-2019-12465 TODO https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
+# CVE-2019-12466
+# CVE-2019-12467
+# CVE-2019-12468
+# CVE-2019-12469
+# CVE-2019-12470
+# CVE-2019-12471
+# CVE-2019-12472
+# CVE-2019-12473
+# CVE-2019-12474
 MediaWiki 1.31:
   1:
     location: ['/includes/DefaultSettings.php']
@@ -136,9 +146,9 @@ MediaWiki 1.31:
 MediaWiki 1.30:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.30.1'
+    secure_version: '1.31.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-0503 https://nvd.nist.gov/vuln/detail/CVE-2018-0504 https://nvd.nist.gov/vuln/detail/CVE-2018-0505 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html'
+    cve: 'MediaWiki 1.30 is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.29:
@@ -160,9 +170,9 @@ MediaWiki 1.28:
 MediaWiki 1.27:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.5'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-0503 https://nvd.nist.gov/vuln/detail/CVE-2018-0504 https://nvd.nist.gov/vuln/detail/CVE-2018-0505 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html'
+    cve: 'MediaWiki 1.27 is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.26:
