--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1243,6 +1243,11 @@ WordPress plugin formbuilder:
     cve: 'OVE-20160724-0005 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_vulnerability_in_formbuilder_wordpress_plugin_allows_plugin_permissions_modification.html OVE-20160724-0008 https://sumofpwn.nl/advisory/2016/multiple_blind_sql_injection_vulnerabilities_in_formbuilder_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2012-0895
+# CVE-2012-0896
+# CVE-2012-3434 3.2
+# CVE-2015-5533 3.4.1
+# N/A 3.2.6 https://lists.openwall.net/full-disclosure/2013/03/05/2  TODO: CVE requested 2019-06-08 with ID 703799
 WordPress plugin count-per-day:
   1:
     location: ['/wp-content/plugins/count-per-day/readme.txt']
