--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2851,3 +2851,11 @@ WordPress plugin slick-popup:
     cve: 'https://www.wordfence.com/blog/2019/05/privilege-escalation-flaw-present-in-slick-popup-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-open-graph:
+  1:
+    location: ['/wp-content/plugins/wp-open-graph/readme.txt']
+    secure_version: '1.6.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-5960'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
