--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -88,19 +88,25 @@
 # https://drupal.org/SA-CORE-2019-002   CVE-2019-6339   8.6.6/8.5.9/7.62
 # https://drupal.org/SA-CORE-2019-003   CVE-2019-6340   8.6.10/8.5.11
 # https://drupal.org/SA-CORE-2019-004   CVE-2019-6341   8.6.13/8.5.14/7.65
+# https://drupal.org/SA-CORE-2019-005   CVE-2019-10909  8.6.15/8.5.15
+# https://drupal.org/SA-CORE-2019-005   CVE-2019-10910  8.6.15/8.5.15
+# https://drupal.org/SA-CORE-2019-005   CVE-2019-10911  8.6.15/8.5.15
+# https://drupal.org/SA-CORE-2019-006   CVE-2019-11358  8.6.15/8.5.15/7.66
+# https://drupal.org/SA-CORE-2019-007   CVE-2019-11831  8.7.1/8.6.16/7.67
+# https://drupal.org/SA-CORE-2019-008   CVE-2019-6342   8.7.5
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.6.13'
+    secure_version: '8.7.5'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://drupal.org/SA-CORE-2019-004 https://nvd.nist.gov/vuln/detail/CVE-2019-6341'
+    cve: 'https://drupal.org/SA-CORE-2019-008 https://nvd.nist.gov/vuln/detail/CVE-2019-6342'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.65'
+    secure_version: '7.67'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2019-004 https://nvd.nist.gov/vuln/detail/CVE-2019-6341'
+    cve: 'https://drupal.org/SA-CORE-2019-007 https://nvd.nist.gov/vuln/detail/CVE-2019-11831'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
