--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2881,3 +2881,11 @@ WordPress plugin woocommerce-jetpack:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-20966'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin nelio-ab-testing:
+  1:
+    location: ['/wp-content/plugins/nelio-ab-testing/readme.txt']
+    secure_version: '4.5.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-10977 https://www.openwall.com/lists/oss-security/2016/05/10/1'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
