--- a/yamls/flatcore.yml
+++ b/yamls/flatcore.yml
@@ -9,10 +9,10 @@
 # CVE-2019-13961
 # CVE-2020-17451 1.5.7 XSS https://lists.openwall.net/full-disclosure/2020/08/07/1
 # CVE-2020-17452 1.5.7 Incorrect Access Control https://lists.openwall.net/full-disclosure/2020/08/07/1
-# CVE-2021-23835 2.0
-# CVE-2021-23836 2.0
-# CVE-2021-23837 2.0
-# CVE-2021-23838 2.0
+# CVE-2021-23835 2.0 https://lists.openwall.net/full-disclosure/2021/01/13/12
+# CVE-2021-23836 2.0 https://lists.openwall.net/full-disclosure/2021/01/13/12
+# CVE-2021-23837 2.0 https://lists.openwall.net/full-disclosure/2021/01/13/12
+# CVE-2021-23838 2.0 https://lists.openwall.net/full-disclosure/2021/01/13/12
 flatCore CMS:
   1:
     location: ['/acp/versions.php']
