--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3190,3 +3190,11 @@ WordPress plugin contact-form-7:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-35489 https://contactform7.com/2020/12/17/contact-form-7-532/ https://www.bleepingcomputer.com/news/security/wordpress-plugin-with-5-million-installs-has-a-critical-vulnerability/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin themeisle-companion:
+  1:
+    location: ['/wp-content/plugins/themeisle-companion/readme.txt']
+    secure_version: '2.10.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2021/01/multiple-vulnerabilities-patched-in-orbit-fox-by-themeisle-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
