--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3206,3 +3206,11 @@ WordPress plugin contact-form-7-style:
     cve: 'https://www.wordfence.com/blog/2021/02/unpatched-vulnerability-50000-wp-sites-must-find-alternative-for-contact-form-7-style/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin responsive-menu:
+  1:
+    location: ['/wp-content/plugins/responsive-menu/readme.txt']
+    secure_version: '4.0.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2021/02/multiple-vulnerabilities-patched-in-responsive-menu-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
