--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3231,3 +3231,11 @@ WordPress plugin wpdatatables:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-26754 https://n4nj0.github.io/advisories/wordpress-plugin-wpdatatables-i/ https://wpdatatables.com/help/whats-new-changelog/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin quadmenu:
+  1:
+    location: ['/wp-content/plugins/quadmenu/readme.txt']
+    secure_version: '2.0.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://sh3llcon.org/la-debilidad-de-wordpress/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
